--- a/slides/index.pug
+++ b/slides/index.pug
@@ -236,6 +236,7 @@ html
         section
           h2 Plans
           ol
+            li make dsl optional
             li asyncio support
             li flask support
             li typing advantages
