--- a/slides/index.pug
+++ b/slides/index.pug
@@ -75,6 +75,18 @@ html
             li.fragment You need method flowchart
             li.fragment Zig-zag in the traceback
             li.fragment Framework internals leak
+        section
+          h2 Usual API
+          pre
+            code.python.
+              class SubscriptionViewSet(viewsets.ModelViewSet):
+                  queryset = Subscription.objects.all()
+                  serializer_class = SubscriptionSerializer
+                  permission_classes = (CanSubscribe,)
+                  filter_class = SubscriptionFilter
+          ol
+            li.fragment What this class do exactly?
+            li.fragment How to use it?
         section(data-background-image=require("./pics/method-flowchart.png") data-background-size="contain")
           br
         section
