Correct division by zero error.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -60,7 +60,7 @@ html
           pre.fragment
             code.python.
               Traceback (most recent call last):
-                File "views.py", line 1027, in post
+                File "views.py", line 1027, in buy_subscription
               ZeroDivisionError: division by zero
         section(data-background-image=require("./pics/enterprise.jpg") data-background-size="contain")
           h2(style="color: white; background-color: black") Enterprise
