Add gitter link to the slides.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -283,8 +283,10 @@ html
           h2 Get in touch
           ul
             li
-              a(href="https://dry-python.org/") Website
+              a(href="https://dry-python.org/") dry-python.org
             li
-              a(href="https://twitter.com/dry_py") Twitter
+              a(href="https://twitter.com/dry_py") twitter.com/dry_py
             li
-              a(href="https://github.com/dry-python") Github
+              a(href="https://github.com/dry-python") github.com/dry-python
+            li
+              a(href="https://gitter.im/dry-python") gitter.im/dry-python
