Add crazy telephone wires slide.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -111,6 +111,8 @@ html
             li.fragment Hard to reason about
             li.fragment Time-consuming
         section
+          img(src=require("./pics/crazy-telephone-wires.png"))
+        section
           blockquote
             p If your code is crap, stickies on the wall won't help.
             a(href="https://twitter.com/henrikkniberg").
