Add image border on the slides.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -122,7 +122,7 @@ html
             p If your code is crap, stickies on the wall won't help.
             a(href="https://twitter.com/henrikkniberg").
               @HenrikKniberg
-            img(src=require("./pics/stickers-on-the-wall.jpg")).plain
+            img(src=require("./pics/stickers-on-the-wall.jpg"))
         section
           h2 Service layer
           p Defines an application's boundary with a layer of services that establishes a set of available operations and coordinates the application's response in each operation.
