Change welcome slide text.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -12,10 +12,10 @@ html
     .reveal
       .slides
         section
-          h1 Readability matters
-          h2
+          h1
             a(href="https://dry-python.org/").
               dry-python.org
+          h2 Making architecture matter
           h4 Artem Malyshev
         section
           h2 BIO
