Correct future plans in slides.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -282,11 +282,14 @@ html
         section
           h2 Plans
           ol
-            li make dsl optional
+            li DSL in functions with ABCMeta
+            li Conditional substories
+            li Rollbacks
             li asyncio support
             li flask support
             li typing advantages
             li linters integration
+            li language server
         section
           h2 Try it!
           pre
