Replace DSL in functions to delegates.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -282,8 +282,8 @@ html
         section
           h2 Plans
           ol
-            li DSL in functions with ABCMeta
             li Conditional substories
+            li Delegates
             li Rollbacks
             li asyncio support
             li flask support
