Change organization title.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -7,7 +7,7 @@ html
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    title Readability matters
+    title Making architecture matter
   body
     .reveal
       .slides
@@ -148,7 +148,7 @@ html
                       "subscription", profile, category.name)
         section
           h2 Dry Python
-          p It is a set of libraries aimed to improve architecture and code design
+          p A set of libraries for pluggable business logic components.
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png").plain
         section
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/stories.png").plain
