Split site and slides bundles.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{% endblock %} | dry-python.org</title>
-  <link rel="stylesheet" href="{{ '/static/slides/styles.css'|asseturl }}">
+  <link rel="stylesheet" href="{{ '/static/styles.css'|asseturl }}">
   <link rel="stylesheet" href="{{ get_pygments_stylesheet()|url }}">
 </head>
 <body>
@@ -17,5 +17,5 @@
   <footer>
     &copy; Copyright 2018 by Artem Malyshev.
   </footer>
-  <script src="{{ '/static/slides/styles.js'|asseturl }}"></script>
+  <script src="{{ '/static/styles.js'|asseturl }}"></script>
 </body>
