--- a/templates/news.html
+++ b/templates/news.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block body %}
-  {% for num, record in bag(this.databag).items() %}
+  {% for record in this.pagination.items %}
     <div>
       <h2>{{ record.title }}</h2>
-      <p>{{ record.date }}</p>
-      <p>{{ record.description }}</p>
+      <p>{{ record.published.strftime('%d.%m.%Y') }}</p>
+      {{ record.body }}
     </div>
   {% endfor %}
 {% endblock %}
