Make gitter sidecar button survive Turbolinks navigation.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,7 @@
 {% from 'macros/navbar.html' import navbar %}
 {% from 'macros/copyright.html' import copyright %}
 {% from 'macros/bundle.html' import bundle %}
+{% from 'macros/gitter_sidecar.html' import gitter_sidecar %}
 <!doctype html>
 <head>
   <meta charset="utf-8">
@@ -18,4 +19,5 @@
   <footer>
     {{ copyright() }}
   </footer>
+  {{ gitter_sidecar() }}
 </body>
