Fix gitter chat. Closes #25

--- a/templates/macros/gitter_sidecar.html
+++ b/templates/macros/gitter_sidecar.html
@@ -2,4 +2,6 @@
   <button class="gitter-open-chat-button">
     Open Chat
   </button>
+
+  <aside class="gitter-chat-embed is-collapsed" data-turbolinks-permanent></aside>
 {% endmacro %}
