--- a/slides/making_architecture_matter/index.pug
+++ b/slides/making_architecture_matter/index.pug
@@ -29,9 +29,7 @@ html
             b hard
           p.fragment
             b and frustrating
-          ol
-            li.fragment Framework independent
-            li.fragment Let's consider WEB for simplicity
+          p.fragment Let's consider we're developing subscription button for a web service
         section(data-background-image=require("./pics/startup.jpg") data-background-size="contain")
           h2(style="color: white; background-color: black") Startup
           br
@@ -225,36 +223,70 @@ html
                   subs = Subscription()
                   subs.buy(category_id=1, price_id=1)
         section
-          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dependencies.png").plain
-          p Provide composition instead of inheritance.
-          p.fragment Boilerplate-free #[b stories] integration with different frameworks.
-        section
-          h2 Implementation
-          pre
-            code.python.
-                  @dataclass
+          h2 Usage
+          ol
+            li.fragment Steps can be stories as well
+              pre
+                code.python.
                   class Subscription:
-                      load_category: Callable[..., Category]
-
                       @story
                       def buy(I):
-                          ...
-          pre.fragment
+                          I.check_purchase
+                      @story
+                      def check_purchase(I):
+                          I.find_promo_code
+            li.fragment Failure will stop the execution of the whole story
+              pre
+                code.python.
+                  def check_balance(self, ctx):
+                      if ctx.profile.balance #{"<"} ctx.price.cost:
+                          return Failure()
+                      else:
+                          return Success()
+        section
+          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dependencies.png").plain
+          p Provide composition instead of inheritance.
+          p.fragment Use #[b stories] with different frameworks without boilerplate.
+        section
+          h2 Delegate responsibility
+          pre
             code.python.
-              from dependencies import Injector
+              class Subscription:
+
+                  def find_category(self, ctx):
+                      category = self.load_category(ctx.category_id)
+                      return Success(category=category)
+
+                  def find_price(self, ctx):
+                      price = self.load_price(ctx.price_id)
+                      return Success(price=price)
+
+                  def __init__(self, load_category, load_price):
+                      self.load_category = load_category
+                      self.load_price = load_price
+        section
+          h2 Injection
+          pre
+            code.python.
+              from dependencies import Injector, Package
+
+              app = Package('app')
 
               class BuySubscription(Injector):
 
-                  buy_subscription = services.Subscription.buy
-                  load_category = repositories.load_category
-                  load_price = repositories.load_price
-                  load_profile = repositories.load_profile
+                  buy_subscription = app.services.Subscription.buy
+                  load_category = app.repositories.load_category
+                  load_price = app.repositories.load_price
+                  load_profile = app.repositories.load_profile
+
+              BuySubscription.buy_subscription(category_id=1, price_id=1)
         section
           h2 Django views
           pre
             code.python.
               from dependencies import operation
               from dependencies.contrib.django import view
+              from django.http import HttpResponse, HttpResponseRedirect
 
               @view
               class BuySubscriptionView(BuySubscription):
@@ -263,7 +295,27 @@ html
                   def post(buy_subscription, category_id, price_id):
                       result = buy_subscription.run(category_id, price_id)
                       if result.is_success:
+                          return HttpResponseRedirect(to=result.value)
+                      elif result.failed_on('check_balance'):
+                          return HttpResponse('#{"<"}h1#{">"}Not enough money#{"<"}/h1#{">"}')
+        section
+          h2 Flask views
+          pre
+            code.python.
+              from dependencies import operation
+              from dependencies.contrib.flask import method_view
+              from flask import redirect
+
+              @method_view
+              class BuySubscriptionView(BuySubscription):
+
+                  @operation
+                  def post(buy_subscription, category_id, price_id):
+                      result = buy_subscription.run(category_id, price_id)
+                      if result.is_success:
                           return redirect(result.value)
+                      elif result.failed_on('check_balance'):
+                          return '#{"<"}h1#{">"}Not enough money#{"<"}/h1#{">"}'
         section
           h2 Celery Tasks
           pre
@@ -286,7 +338,7 @@ html
             li Delegates
             li Rollbacks
             li asyncio support
-            li flask support
+            li pyramid support
             li typing advantages
             li linters integration
             li language server
