--- a/slides/making_architecture_matter/index.pug
+++ b/slides/making_architecture_matter/index.pug
@@ -152,12 +152,11 @@ html
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/stories.png").plain
           pre
             code.python.
-              from stories import story, argument
+              from stories import story, arguments
 
               class Subscription:
                   @story
-                  @argument('category_id')
-                  @argument('price_id')
+                  @arguments('category_id', 'price_id')
                   def buy(I):
                       I.find_category
                       I.find_price
