--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,8 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   {{ bundle() }}
   <title>{% block title %}Welcome{% endblock %} | dry-python.org</title>
 </head>
