Fix gitter glitch on the initial page load.

--- a/templates/macros/gitter_sidecar.html
+++ b/templates/macros/gitter_sidecar.html
@@ -3,5 +3,8 @@
     Open Chat
   </button>
 
-  <aside class="gitter-chat-embed is-collapsed" data-turbolinks-permanent></aside>
+  <aside class="gitter-chat-embed is-collapsed"
+         style="display: none;"
+         data-turbolinks-permanent>
+  </aside>
 {% endmacro %}
