--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
   {{ bundle() }}
   <title>{% block title %}Welcome{% endblock %} | dry-python.org</title>
 </head>
-<body>
+<body class="bg-grey-lightest">
   <header>
     {{ navbar() }}
   </header>
