--- a/webpack/app/index.css
+++ b/webpack/app/index.css
@@ -2,3 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 @import "styles/progress-bar.css";
+@import "styles/navbar.css";
+/* TODO: Move this classes to the styles/navbar.css */
+
+.top-navbar-item {
+  @apply .text-grey-darker .text-sm .mr-4 .font-semibold .pb-4 .border-b-2 .border-solid .border-transparent;
+}
+
+.top-navbar-item:hover {
+  @apply .text-black .border-black;
+}
