--- a/templates/macros/navbar.html
+++ b/templates/macros/navbar.html
@@ -1,13 +1,15 @@
 {% macro navbar() %}
   <div class="bg-white">
     <div class="container mx-auto flex items-center py-4">
-      <nav class="w-2/5">
-        {% for path, label in bag('navbar').items() %}
-          <a href="{{ path|url }}" class="top-navbar-item">
-            {{ label }}
-          </a>
-        {% endfor %}
-      </nav>
+      <div class="mr-4">
+        <img src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png"
+             class="h-8 w-8 rounded-full">
+      </div>
+      {% for path, label in bag('navbar').items() %}
+        <a href="{{ path|url }}" class="top-navbar-item">
+          {{ label }}
+        </a>
+      {% endfor %}
     </div>
   </div>
 {% endmacro %}
