--- a/webpack/app/styles/navbar.css
+++ b/webpack/app/styles/navbar.css
@@ -1,9 +1,5 @@
-a {
-  text-decoration: none;
-}
-
 .top-navbar-item {
-  @apply .text-grey-darker .text-sm .mr-4 .font-semibold .align-middle .border-b-2 .border-solid .border-transparent;
+  @apply .no-underline .text-grey-darker .text-sm .mr-4 .font-semibold .align-middle .border-b-2 .border-solid .border-transparent;
 }
 
 .top-navbar-item:hover {
