--- a/slides/making_architecture_matter/index.pug
+++ b/slides/making_architecture_matter/index.pug
@@ -222,7 +222,29 @@ html
                   subs = Subscription()
                   subs.buy(category_id=1, price_id=1)
         section
-          h2 Usage
+          h2 Failures
+          ol
+            li.fragment Define a number of reasons
+              pre
+                code.python.
+                  @Subscription.buy.failures
+                  class Errors(Enum):
+                      low_balance = auto()
+            li.fragment Failure will stop the execution of the whole story
+              pre
+                code.python.
+                  def check_balance(self, ctx):
+                      if ctx.profile.balance #{"<"} ctx.price.cost:
+                          return Failure(Errors.low_balance)
+                      else:
+                          return Success()
+            li.fragment We check failure reason
+              pre
+                code.python.
+                  result = Subscription().buy.run(category_id=2)
+                  assert result.failed_because(Errors.low_balance)
+        section
+          h2 Substories
           ol
             li.fragment Steps can be stories as well
               pre
@@ -230,16 +252,18 @@ html
                   class Subscription:
                       @story
                       def buy(I):
-                          I.check_purchase
+                          I.calculate_discount
+                          I.check_balance
                       @story
-                      def check_purchase(I):
+                      def calculate_discount(I):
                           I.find_promo_code
-            li.fragment Failure will stop the execution of the whole story
+                          I.check_code_expiration
+            li.fragment Each step can stop the execution of current substory
               pre
                 code.python.
-                  def check_balance(self, ctx):
-                      if ctx.profile.balance #{"<"} ctx.price.cost:
-                          return Failure()
+                  def check_code_expiration(self, ctx):
+                      if ctx.promo_code.is_expired():
+                          return Skip()
                       else:
                           return Success()
         section
