--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
-{% from 'macros/navbar.html' import navbar %}
-{% from 'macros/copyright.html' import copyright %}
-{% from 'macros/bundle.html' import bundle %}
-{% from 'macros/gitter_sidecar.html' import gitter_sidecar %}
+{% from 'components/navbar.html' import navbar %}
+{% from 'components/copyright.html' import copyright %}
+{% from 'components/bundle.html' import bundle %}
+{% from 'components/gitter_sidecar.html' import gitter_sidecar %}
 <!doctype html>
 <head>
   <meta charset="utf-8">
