Remove background settings.

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,5 +1,5 @@
 {% macro navbar() %}
-  <div class="bg-white container mx-auto flex items-center py-4">
+  <div class="container mx-auto flex items-center py-4">
     <div class="w-3/5">
       <a href="/" class="top-navbar-item">
         dry-python
