Rename the first talk to the "Introducing dry-python".

--- a/slides/introducing-dry-python/index.pug
+++ b/slides/introducing-dry-python/index.pug
@@ -7,15 +7,15 @@ html
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    title Making architecture matter
+    title Introducing dry-python
   body
     .reveal
       .slides
         section
+          h2 Introducing
           h1
             a(href="https://dry-python.org/").
-              dry-python.org
-          h2 Making architecture matter
+              dry-python
           h4 Artem Malyshev
         section
           h2 BIO
