Correct introducing dry-python talk meta description.

--- a/slides/introducing-dry-python/index.pug
+++ b/slides/introducing-dry-python/index.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    meta(name="description" content="Dry-Python")
+    meta(name="description" content="Introducing dry-python")
     meta(name="author" content="Artem Malyshev")
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
