--- a/webpack/app/index.css
+++ b/webpack/app/index.css
@@ -1,5 +1,8 @@
 @import "styles/progress-bar.css";
+@import "styles/header.css";
 @import "styles/navbar.css";
+@import "styles/text.css";
+@import "styles/footer.css";
 @tailwind preflight;
 @tailwind components;
 @tailwind utilities;
