--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,14 +12,17 @@
   <title>{% block title %}Welcome{% endblock %} | dry-python.org</title>
 </head>
 <body>
-  <header>
-    {{ navbar() }}
-  </header>
-  <div>
+  <div class="header-container">
+    <header class="container header">
+      {{ navbar() }}
+      {% block header %}{% endblock header %}
+    </header>
+  </div>
+  <div class="container mx-auto text py-4">
     {% block body %}
     {% endblock %}
   </div>
-  <footer>
+  <footer class="container footer">
     {{ copyright() }}
   </footer>
   {{ gitter_sidecar() }}
