--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,10 +8,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:400,400i,600,600i" rel="stylesheet">
   {{ bundle() }}
   <title>{% block title %}Welcome{% endblock %} | dry-python.org</title>
 </head>
-<body>
+<body class="font-source-sans">
   <div class="header-container">
     <header class="container header">
       {{ navbar() }}
