Adjust test size.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
   {{ bundle() }}
   <title>{% block title %}Welcome{% endblock %} | dry-python.org</title>
 </head>
-<body class="font-source-sans">
+<body class="font-source-sans text-lg">
   <div class="header-container">
     <header class="container header">
       {{ navbar() }}
