--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -9,7 +9,9 @@
   <h1 class="header-content__title">{{ this.title }}</h1>
   <h2 class="header-content__description">{{ this.description|safe }}</h2>
   <div class="container header-button-group">
-    <a href="https://github.com/dry-python" class="header-button-group__button">GitHub</a>
+    <a href="https://github.com/dry-python" class="header-button-group__button">
+      GitHub
+    </a>
   </div>
 </div>
 {% endblock header %}
